# OpenBLT-Rust

./: Cargo.toml  LICENSE  README.md  build.sh
.cargo/: config.toml
hal/s32k118-hal/: Cargo.toml
hal/s32k148-hal/: Cargo.toml
hal/s32k148-hal/src/: can.rs  clock.rs  gpio.rs  hal.rs  lib.rs  peripheral.rs  reg.rs  uart.rs
hal/s32k148-hal/src/flash/: controller.rs  mod.rs
openblt/: Cargo.toml  build.rs  link.x
openblt/.cargo/: config.toml
openblt/boards/s32k148/: Cargo.toml  build.rs
openblt/boards/s32k148/include/: S32K148.h  S32K148_features.h  clock_config.h  device_registers.h  pin_mux.h  s32_core_cm4.h  system_S32K148.h
openblt/boards/s32k148/include/S32K148/: pcc.h  scg.h
openblt/boards/s32k148/include/device/: device_registers.h
openblt/boards/s32k148/linker/: S32K148_256_flash.ld  S32K148_256_ram.ld
openblt/boards/s32k148/src/: board.rs  lib.rs  main.rs  state.rs
openblt/boards/s32k148/src/c/: clock_config.c  pin_mux.c
openblt/boards/s32k148/src/rust/: board.rs  clock.rs  interrupts.rs  mod.rs  pins.rs
openblt/boards/s32k148/startup/: startup_S32K148.S  system_S32K148.c  system_S32K148.h
openblt/src/: lib.rs  main.rs  startup.rs
openblt/src/boards/: mod.rs
openblt/src/boards/s32k148/: mod.rs
openblt/src/boards/s32k148/rust/: board.rs  mod.rs
openblt/src/core/: memory.rs  mod.rs
openblt/src/core/memory/: mod.rs
openblt/src/hal/: mod.rs  s32k118.rs  s32k148.rs
openblt/src/hal/s32k148/: flash.rs  hal.rs  mod.rs
openblt/src/protocol/: memory.rs  mod.rs
openblt/src/utils/: mod.rs
s32k118-hal/: Cargo.toml
s32k118-hal/src/: lib.rs
s32k148-hal/: Cargo.toml
s32k148-hal/src/: can.rs  flash.rs  lib.rs
s32k148-hal/src/flash/: controller.rs  mod.rs
scripts/: build.sh  flash.jlink
src/: lib.rs
src/boards/: mod.rs
src/boards/s32k148/: mod.rs
src/core/: mod.rs
src/protocol/: can.rs  mod.rs  xcp.rs
src/utils/: crc.rs  flash.rs  mod.rs
test-app/: Cargo.toml
test-app/src/: main.rs
