[workspace]
members = [
    "openblt",
    "s32k118-hal",
    "s32k148-hal"
]

[workspace.dependencies]
embedded-can = "0.4.0"
bitflags = "2.4.1"
nb = "1.0.0"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
thiserror = "1.0.56"
log = "0.4.20"

[package]
name = "openblt-rust"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "OpenBLT bootloader implementation in Rust for NXP S32K series"
license = "GPL-3.0"

[dev-dependencies]
criterion = "0.5.1"
