[package]
name = "s32k118-hal"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Hardware Abstraction Layer for NXP S32K118 microcontroller"
license = "MIT"

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
embedded-can = { workspace = true }
nb = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true } 
