[package]
name = "s32k148-hal"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Hardware Abstraction Layer for NXP S32K148 microcontroller"
license = "MIT"

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
embedded-can = { workspace = true }
nb = { workspace = true }
thiserror = { workspace = true, default-features = false }
bitflags = { workspace = true }
volatile-register = "0.2.0"
vcell = "0.1.3" 
