[package]
name = "s32k148-board"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Board support package for NXP S32K148"
license = "MIT"

[[bin]]
name = "s32k148-bootloader"
path = "src/main.rs"

[dependencies]
embedded-can = { workspace = true }
bitflags = { workspace = true }
nb = { workspace = true }
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
log = { workspace = true }
s32k148-hal = { path = "../../../hal/s32k148-hal" }
panic-halt = "0.2.0"
cortex-m-semihosting = "0.5.0"

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = true
lto = true
codegen-units = 1
panic = 'abort'
incremental = false

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
codegen-units = 256
panic = 'unwind'
incremental = true 
